# teensy-cmake-macros

./: .gitignore  CLAUDE.md  CMakeLists.arm.include.txt  CMakeLists.include.txt  CMakeLists.txt  README.md
.github/: test.yml
.github/workflows/: audio-test.yml  basic-test.yml  eeprom-test.yml  spi-test.yml  test.yml  vector.yml
cmake/: teensy.cmake  teensy.cmake.in  teensy_cmake_macros.cmake.in
cmake/toolchain/: teensy41.toolchain.cmake
test/: CMakeLists.txt  CMakeLists.txt.waldo  basic.cpp  teensy41.toolchain.cmake
tests/: teensy41.toolchain.cmake
tests/audio/: CMakeLists.txt  audio.cpp
tests/basic/: CMakeLists.txt  basic.cpp
tests/eeprom/: CMakeLists.txt  eepromapp.cpp
tests/spi/: CMakeLists.txt  spiapp.cpp
tests/vector/: CMakeLists.txt  vector.cpp
